<resources>
    <string name="app_name">LoyaltyFirst</string>
    <string name="title_activity_main4">MainActivity4</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="values">TextView</string>
    <string name="value">TextView</string>
    <string name="v">TextView</string>
    <string name="a">TextView</string>
    <string name="s">TextView</string>
    <string name="f">s</string>
</resources>